--- a/streamy/src/app/music-player/music-player.component.html
+++ b/streamy/src/app/music-player/music-player.component.html
@@ -1,55 +1,73 @@
 <div class="container">
-    <mat-card>
-        <mat-toolbar color="primary" class="top-toolbar">
-            <span>
-                Audio Player
-            </span>
+  <mat-card>
+    <mat-toolbar color="primary" class="top-toolbar">
+      <span> Audio Player </span>
+    </mat-toolbar>
+
+    <mat-card-content>
+      <div class="audio-player">
+        <div class="logo">
+          <mat-icon>music_note</mat-icon>
+          <div>music player</div>
+        </div>
+      </div>
+
+      <div class="songList">
+        <mat-list color="primary">
+            <h3 mat-subheader>Songs</h3>
+            <mat-list-item *ngFor="let file of files; let i = index" (click)="openFile(file, i)">
+              <mat-icon color="primary" mat-list-icon>music_note</mat-icon>
+              <h4 mat-line>{{ file.name }}</h4>
+              <h5 mat-line>by {{ file.artist }}</h5>
+              <mat-icon color="primary" *ngIf="currentFile.index === i && !state?.error">volume_up</mat-icon>
+              <h6 *ngIf="currentFile.index === i && state?.error">ERROR</h6>
+              <mat-divider></mat-divider>
+            </mat-list-item>
+          </mat-list>
+          </div>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <div class="media-footer">
+        <mat-toolbar color="primary">
+          <mat-toolbar-row>
+            {{ state?.readableCurrentTime }}
+            <mat-slider
+              class="time-slider"
+              min="0"
+              [max]="state?.duration"
+              step="1"
+              [value]="state?.currentTime"
+              (input)="onSliderChangeEnd($event)"
+              [disabled]="state?.error || currentFile.index === undefined"
+            ></mat-slider>
+            {{ state?.readableDuration }}
+          </mat-toolbar-row>
+          <mat-toolbar-row class="media-action-bar">
+            <button
+              mat-button
+              [disabled]="isFirstPlaying()"
+              (click)="previous()"
+            >
+              <mat-icon mat-list-icon>skip_previous</mat-icon>
+            </button>
+            <button
+              mat-button
+              (click)="play()"
+              [disabled]="state?.error"
+              *ngIf="!state?.playing"
+            >
+              <mat-icon mat-list-icon>play_circle_filled</mat-icon>
+            </button>
+            <button mat-button (click)="pause()" *ngIf="state?.playing">
+              <mat-icon mat-list-icon>pause</mat-icon>
+            </button>
+            <button mat-button [disabled]="isLastPlaying()" (click)="next()">
+              <mat-icon mat-list-icon>skip_next</mat-icon>
+            </button>
+          </mat-toolbar-row>
         </mat-toolbar>
-
-        <mat-card-content>
-            <div class="audio-player">
-                <div class="logo">
-                    <mat-icon>music_note</mat-icon>
-                    <div>music player</div>
-                </div>
-            </div>
-
-            <mat-list color="primary">
-                <h3 mat-subheader>Songs</h3>
-                <mat-list-item *ngFor="let song of songs">
-                    <mat-icon mat-list-icon>music_note</mat-icon>
-                    <h4 mat-line>{{song.title}}</h4>
-                    <p mat-line>{{song.artist}}</p>
-                    <mat-icon color="primary">volume_up</mat-icon>
-                    <mat-divider></mat-divider>
-                </mat-list-item>
-            </mat-list>
-        </mat-card-content>
-
-        <mat-card-actions>
-            <div class="media-footer">
-                <mat-toolbar color="primary">
-                  <mat-toolbar-row>
-                     {{ state?.readableCurrentTime }}
-                     <mat-slider class="time-slider" min="0" [max]="state?.duration" step="1" [value]="state?.currentTime" [disabled]="state?.error || currentSong.index === undefined"></mat-slider>
-                     {{ state?.readableDuration }}
-                  </mat-toolbar-row>
-                  <mat-toolbar-row class="media-action-bar">
-                    <button mat-button [disabled]="isFirstPlaying()">
-                      <mat-icon mat-list-icon>skip_previous</mat-icon>
-                    </button>
-                    <button mat-button (click)="play()">
-                      <mat-icon mat-list-icon>play_circle_filled</mat-icon>
-                    </button>
-                    <button mat-button (click)="pause()" >
-                      <mat-icon mat-list-icon>pause</mat-icon>
-                    </button>
-                    <button  mat-button [disabled]="isLastPlaying()">
-                      <mat-icon mat-list-icon>skip_next</mat-icon>
-                    </button>
-                  </mat-toolbar-row>
-                </mat-toolbar>
-              </div>
-        </mat-card-actions>
-    </mat-card>
+      </div>
+    </mat-card-actions>
+  </mat-card>
 </div>
